# ROS_communication

./: CMakeLists.txt  README.md  package.xml
nodes/: vsum_client_python.py  vsum_service_python.py
src/: vsum_client.cpp  vsum_service.cpp
