<?xml version="1.0"?>

<package>

    <name>ros_service_examples</name>
    <version>0.0.1</version>
    <description>Semantic Hierarchy Recorder system allowing detailed execution time logging of autonomously performed
        robot plans on cognitive agents
    </description>

    <maintainer email="mohamad4danesh@gmail.com">Mohamad H Danesh</maintainer>

    <license>BSD</license>

    <author email="mohamad4danesh@gmail.com">Mohamad H Danesh</author>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>roslib</build_depend>
    <build_depend>message_generation</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>roslib</run_depend>
    <run_depend>message_runtime</run_depend>

</package>
